[gd_scene load_steps=20 format=3 uid="uid://8wc8q4tjwfr7"]

[ext_resource type="Script" uid="uid://mmya3sepy6r4" path="res://scenes/main/screen/gameUI/canvas_game_ui.gd" id="1_7c77l"]
[ext_resource type="Texture2D" uid="uid://bumun64uciiwc" path="res://assets/textures/Heart.png" id="1_c1rh2"]
[ext_resource type="StyleBox" uid="uid://b4cpebxh2b2rr" path="res://scenes/main/screen/gameUI/panel_style.tres" id="1_u1cvo"]
[ext_resource type="Texture2D" uid="uid://c7f0ithabga8e" path="res://assets/tiles/placement/turret.png" id="4_t5yut"]
[ext_resource type="Texture2D" uid="uid://gl4wa8cp2d2p" path="res://assets/tiles/placement/cannon.png" id="5_byvj6"]
[ext_resource type="Texture2D" uid="uid://04iak6jv43kl" path="res://assets/tiles/placement/missile.png" id="6_l1bvi"]
[ext_resource type="Texture2D" uid="uid://cmvd7nc8a6l3x" path="res://assets/tiles/placement/support.png" id="7_xhcrg"]
[ext_resource type="Theme" uid="uid://c04p4lp6xvykg" path="res://assets/themes/button.tres" id="8_5174x"]
[ext_resource type="Texture2D" uid="uid://dwfu81vrw8bsg" path="res://assets/icons/pause(32).png" id="8_ib47w"]

[sub_resource type="LabelSettings" id="LabelSettings_7c77l"]
font_size = 25
font_color = Color(0.9137255, 0.69411767, 0.20784314, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_jx63h"]

[sub_resource type="LabelSettings" id="LabelSettings_qj7ko"]
font_size = 14
font_color = Color(0.9137255, 0.69411767, 0.20784314, 1)

[sub_resource type="FontVariation" id="FontVariation_qkgtm"]

[sub_resource type="LabelSettings" id="LabelSettings_c1rh2"]
font = SubResource("FontVariation_qkgtm")
font_size = 25
font_color = Color(0.24921095, 0.22337419, 0.6480576, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u1cvo"]
load_path = "res://.godot/imported/RedBag.png-c0bbffb503317d38c26dcddecbf988e2.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_ib47w"]
font_size = 30
font_color = Color(0.9137255, 0.69411767, 0.20784314, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_7c77l"]
default_font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_ibuc6"]
font_size = 30
font_color = Color(0.9137255, 0.69411767, 0.20784314, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3tgfj"]
font_size = 18
font_color = Color(0.9137255, 0.69411767, 0.20784314, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="CanvasGameUI" type="CanvasLayer"]
layer = 0
follow_viewport_scale = 0.5
script = ExtResource("1_7c77l")

[node name="BarsControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -320.0
offset_right = 720.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SideBar" type="Control" parent="BarsControl"]
z_index = 1
layout_mode = 1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="BarsControl/SideBar"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30972221, 0.12163737, 0.22892234, 1)

[node name="SepLine" type="ColorRect" parent="BarsControl/SideBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_right = 0.014
anchor_bottom = 1.0
offset_right = 0.96799994
grow_vertical = 2
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="AdviceTitle" type="Label" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_right = 1.0
anchor_bottom = 0.1
offset_left = -0.13600159
offset_top = 0.3199997
offset_right = -0.13601685
offset_bottom = -0.040008545
text = "AI Generated Advice"
label_settings = SubResource("LabelSettings_7c77l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoTitle" type="Label" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 0.99300003
anchor_bottom = 0.684
offset_left = 1.0
offset_top = 0.039978027
offset_right = 0.015991211
offset_bottom = 0.23999023
text = "Placement tiles info"
label_settings = SubResource("LabelSettings_7c77l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AdvicePanel" type="Panel" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.5
offset_left = 0.024000168
offset_right = -0.008026123
theme_override_styles/panel = ExtResource("1_u1cvo")

[node name="AdviceLabel" type="RichTextLabel" parent="BarsControl/SideBar/AdvicePanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.023000002
anchor_right = 0.96800005
anchor_bottom = 0.98300004
offset_left = 5.0
offset_top = -0.06560087
offset_right = 0.12539673
offset_bottom = 0.022369385
theme = SubResource("Theme_jx63h")
theme_override_colors/default_color = Color(0.2509804, 0.22352941, 0.64705884, 1)
text = "The curious fox leapt over the fallen log, pausing briefly to sniff the fragrant air before disappearing swiftly into the dense, shadowy forest beyond the hill."
horizontal_alignment = 1

[node name="AdviceButton" type="Button" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.52
anchor_right = 0.9
anchor_bottom = 0.55
theme = ExtResource("8_5174x")
text = "Generate Advice"

[node name="SepLineVert" type="ColorRect" parent="BarsControl/SideBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.606
grow_vertical = 2
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="TurretTile" type="TextureRect" parent="BarsControl/SideBar"]
z_index = 4
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.69
anchor_right = 0.16
anchor_bottom = 0.74
texture = ExtResource("4_t5yut")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="BarsControl/SideBar/TurretTile"]
z_index = -1
layout_mode = 0
offset_left = -3.4000244
offset_top = -2.600006
offset_right = 34.599976
offset_bottom = 35.399994
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="Info" type="Label" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.69
anchor_right = 0.98
anchor_bottom = 0.74
theme_override_colors/font_color = Color(0.2509804, 0.22352941, 0.64705884, 1)
theme_override_font_sizes/font_size = 10
text = "Turret tower - attacks troops"
label_settings = SubResource("LabelSettings_qj7ko")
vertical_alignment = 1

[node name="CannonTile" type="TextureRect" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.77
anchor_right = 0.16
anchor_bottom = 0.82
offset_left = -0.4000244
offset_right = -0.11203003
texture = ExtResource("5_byvj6")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="BarsControl/SideBar/CannonTile"]
z_index = -1
layout_mode = 0
offset_left = -3.0
offset_top = -2.7999878
offset_right = 35.0
offset_bottom = 35.200012
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="Info2" type="Label" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.77
anchor_right = 0.98
anchor_bottom = 0.82
offset_left = -3.8146973e-05
offset_right = -3.0517578e-05
theme_override_colors/font_color = Color(0.2509804, 0.22352941, 0.64705884, 1)
theme_override_font_sizes/font_size = 10
text = "Cannon tower - attacks tanks"
label_settings = SubResource("LabelSettings_qj7ko")
vertical_alignment = 1

[node name="MissileTile" type="TextureRect" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.85
anchor_right = 0.16
anchor_bottom = 0.9
offset_left = -0.4000244
offset_right = -0.11203003
texture = ExtResource("6_l1bvi")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="BarsControl/SideBar/MissileTile"]
z_index = -1
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 35.0
offset_bottom = 35.0
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="Info3" type="Label" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.85
anchor_right = 0.98
anchor_bottom = 0.9
offset_left = -3.8146973e-05
offset_right = -3.0517578e-05
theme_override_colors/font_color = Color(0.2509804, 0.22352941, 0.64705884, 1)
theme_override_font_sizes/font_size = 10
text = "Missile tower - attacks planes"
label_settings = SubResource("LabelSettings_qj7ko")
vertical_alignment = 1

[node name="SupportTile" type="TextureRect" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.93
anchor_right = 0.16
anchor_bottom = 0.98
offset_left = -0.4000244
offset_right = -0.11203003
texture = ExtResource("7_xhcrg")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="BarsControl/SideBar/SupportTile"]
z_index = -1
layout_mode = 0
offset_left = -3.0
offset_top = -3.2000122
offset_right = 35.0
offset_bottom = 34.799988
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="Info4" type="Label" parent="BarsControl/SideBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.92
anchor_right = 0.98
anchor_bottom = 0.98
offset_left = -3.8146973e-05
offset_right = -3.0517578e-05
theme_override_colors/font_color = Color(0.2509804, 0.22352941, 0.64705884, 1)
theme_override_font_sizes/font_size = 10
text = "Support tower - generates 
base health and coins over time"
label_settings = SubResource("LabelSettings_qj7ko")
vertical_alignment = 1

[node name="TopBar" type="Control" parent="BarsControl"]
z_index = -1
layout_mode = 1
anchor_right = 0.8
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRectBarBox" type="ColorRect" parent="BarsControl/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30980393, 0.12156863, 0.22745098, 1)

[node name="SepLine" type="ColorRect" parent="BarsControl/TopBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 0.95300007
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.9920044
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="ButtonPause" type="Button" parent="BarsControl/TopBar"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.078
anchor_right = 0.05
anchor_bottom = 0.84800005
offset_left = 3.2400002
offset_top = 2.008
offset_right = -2.6000023
offset_bottom = -1.2720032
theme = ExtResource("8_5174x")
icon = ExtResource("8_ib47w")
icon_alignment = 1

[node name="SepLineCollumn0" type="ColorRect" parent="BarsControl/TopBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055
anchor_right = 0.06
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="WaveTitleLabel" type="Label" parent="BarsControl/TopBar"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.8
offset_top = 0.19999981
offset_bottom = 0.20000076
grow_horizontal = 2
grow_vertical = 2
text = "Current Wave"
label_settings = SubResource("LabelSettings_7c77l")
vertical_alignment = 1

[node name="WavePanel" type="PanelContainer" parent="BarsControl/TopBar"]
z_index = 1
custom_minimum_size = Vector2(20, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22
anchor_top = 0.2
anchor_right = 0.265
anchor_bottom = 0.8
offset_left = 4.0
offset_top = 0.19999981
offset_right = -4.0

[node name="WaveLabel" type="Label" parent="BarsControl/TopBar/WavePanel"]
z_index = 1
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_c1rh2")
vertical_alignment = 1

[node name="WavePanelVisual" type="PanelContainer" parent="BarsControl/TopBar"]
z_index = 1
custom_minimum_size = Vector2(20, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22
anchor_top = 0.2
anchor_right = 0.265
anchor_bottom = 0.8
offset_left = -0.31999207
offset_top = 0.19999981
offset_right = -0.4559784
theme_override_styles/panel = ExtResource("1_u1cvo")

[node name="StartWaveButton" type="Button" parent="BarsControl/TopBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28
anchor_top = 0.15
anchor_right = 0.43
anchor_bottom = 0.8
theme = ExtResource("8_5174x")
text = "Next Wave"

[node name="SepLineCollumn1" type="ColorRect" parent="BarsControl/TopBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.445
anchor_right = 0.45
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="LabelGamemode" type="Label" parent="BarsControl/TopBar"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_right = 0.72
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Standart Gamemode"
label_settings = SubResource("LabelSettings_7c77l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SepLineCollumn2" type="ColorRect" parent="BarsControl/TopBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.72
anchor_right = 0.725
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="HealthTexture" type="TextureRect" parent="BarsControl/TopBar"]
layout_mode = 0
offset_left = 830.0
offset_top = 1.0
offset_right = 892.0
offset_bottom = 62.0
texture = ExtResource("1_c1rh2")
stretch_mode = 4

[node name="HealthPanel" type="PanelContainer" parent="BarsControl/TopBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.77
anchor_top = 0.2
anchor_right = 0.815
anchor_bottom = 0.8
offset_left = 4.0
offset_top = 0.00799942
offset_right = -4.0
offset_bottom = 0.0079956055

[node name="HealthLabel" type="Label" parent="BarsControl/TopBar/HealthPanel"]
z_index = 2
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_c1rh2")
vertical_alignment = 1

[node name="HealthPanelVisual" type="PanelContainer" parent="BarsControl/TopBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.77
anchor_top = 0.2
anchor_right = 0.815
anchor_bottom = 0.8
offset_left = 0.3279419
offset_top = 0.00799942
offset_right = 0.27197266
offset_bottom = 0.0079956055
theme_override_styles/panel = ExtResource("1_u1cvo")

[node name="SepLineCollumn3" type="ColorRect" parent="BarsControl/TopBar"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.825
anchor_right = 0.83
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.21568628, 0.23921569, 1)

[node name="CoinTexture" type="TextureRect" parent="BarsControl/TopBar"]
layout_mode = 1
offset_left = 956.0
offset_top = -9.0
offset_right = 1017.0
offset_bottom = 57.0
texture = SubResource("CompressedTexture2D_u1cvo")
stretch_mode = 4

[node name="CoinPanel" type="PanelContainer" parent="BarsControl/TopBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.88
anchor_top = 0.2
anchor_right = 0.987
anchor_bottom = 0.8
offset_left = 4.0
offset_top = 0.031999588
offset_right = -4.0
offset_bottom = 0.03199768

[node name="CoinLabel" type="Label" parent="BarsControl/TopBar/CoinPanel"]
z_index = 2
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_c1rh2")
vertical_alignment = 1

[node name="CoinPanelVisual" type="PanelContainer" parent="BarsControl/TopBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.88
anchor_top = 0.2
anchor_right = 0.987
anchor_bottom = 0.8
offset_left = 0.2399292
offset_top = 0.031999588
offset_right = -0.48010254
offset_bottom = 0.03199768
theme_override_styles/panel = ExtResource("1_u1cvo")

[node name="PanelPauseMenu" type="Panel" parent="."]
visible = false
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelPauseMenu"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39600003
anchor_top = 0.266
anchor_right = 0.60400003
anchor_bottom = 0.64100003
offset_left = -0.24005127
offset_top = -0.2400055
offset_right = 0.2399292
offset_bottom = -0.24002075
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30980393, 0.12156863, 0.22745098, 1)

[node name="ColorRectOuter" type="ColorRect" parent="PanelPauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.395
anchor_top = 0.266
anchor_right = 0.605
anchor_bottom = 0.643
offset_left = -0.5599365
offset_top = -2.0
offset_right = 0.5600586
offset_bottom = 0.47998047
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9137255, 0.69411767, 0.20784314, 1)

[node name="LabelTitle" type="Label" parent="PanelPauseMenu"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39400002
anchor_top = 0.27
anchor_right = 0.60400003
anchor_bottom = 0.35000002
grow_horizontal = 2
grow_vertical = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_ib47w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelPauseMenu"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.41
anchor_top = 0.38
anchor_right = 0.59
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="PanelPauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_5174x")
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelPauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_5174x")
text = "Restart Game"

[node name="FirebaseButton" type="Button" parent="PanelPauseMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_7c77l")
theme_override_colors/font_color = Color(0.9137255, 0.69411767, 0.20784314, 1)
theme_override_colors/font_focus_color = Color(0.21176471, 0.6745098, 0.7019608, 1)
theme_override_colors/font_pressed_color = Color(0.11372549, 0.30980393, 0.2784314, 1)
theme_override_colors/font_hover_color = Color(0.21176471, 0.6745098, 0.7019608, 1)
theme_override_colors/font_hover_pressed_color = Color(0.654902, 0.9490196, 0.9647059, 1)
theme_override_colors/font_disabled_color = Color(0.9019608, 0.050980393, 0.34509805, 1)
text = "Write to Firebase
"

[node name="MenuButton" type="Button" parent="PanelPauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_5174x")
text = "Return to Menu"

[node name="PanelGameOver" type="Panel" parent="."]
visible = false
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelGameOver"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39600003
anchor_top = 0.266
anchor_right = 0.60400003
anchor_bottom = 0.64100003
offset_left = -0.24005127
offset_top = -0.2400055
offset_right = 0.2399292
offset_bottom = -0.24002075
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30980393, 0.12156863, 0.22745098, 1)

[node name="ColorRectOuter" type="ColorRect" parent="PanelGameOver"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.395
anchor_top = 0.266
anchor_right = 0.605
anchor_bottom = 0.643
offset_left = -0.5599365
offset_top = -2.0
offset_right = 0.5600586
offset_bottom = 0.47998047
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9137255, 0.69411767, 0.20784314, 1)

[node name="LabelTitle" type="Label" parent="PanelGameOver"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39400002
anchor_top = 0.27
anchor_right = 0.60400003
anchor_bottom = 0.35000002
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_ibuc6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDescription" type="Label" parent="PanelGameOver"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.405
anchor_top = 0.35
anchor_right = 0.595
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2
text = "Terminus has fallen! Will you give up the fight or try again?"
label_settings = SubResource("LabelSettings_3tgfj")
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelGameOver"]
z_index = 11
layout_mode = 1
anchors_preset = -1
anchor_left = 0.41
anchor_top = 0.48
anchor_right = 0.59
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="RestartButton" type="Button" parent="PanelGameOver/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_5174x")
text = "Restart Game"

[node name="MenuButton" type="Button" parent="PanelGameOver/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_5174x")
text = "Return to Menu"

[node name="PanelHoverInfo" type="Panel" parent="."]
visible = false
z_index = 10
offset_left = 63.0
offset_top = 117.0
offset_right = 254.0
offset_bottom = 176.0

[node name="LabelTitle" type="Label" parent="PanelHoverInfo"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.4
theme_override_font_sizes/font_size = 15
text = "Build Turret Tower"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInfo" type="Label" parent="PanelHoverInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.45
anchor_right = 0.95
anchor_bottom = 0.65
offset_bottom = -3.1500034
theme_override_font_sizes/font_size = 9
text = "Tower heals base and generates coins"
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelPrice" type="Label" parent="PanelHoverInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.75
anchor_right = 0.95
anchor_bottom = 1.0
offset_top = -6.25
offset_bottom = -0.8999977
theme_override_font_sizes/font_size = 9
text = "Price: 200 coins"
vertical_alignment = 1
autowrap_mode = 2
